# vespera

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SKILL.md  openapi.json  package.json  pr_description.md  scores.json
.changepacks/: changepack_log_DYB7H8x4ZginWmM3iVFB9.json  changepack_log_EOqDZl3jRWhOYS6fCfVK9.json  changepack_log_G1srirdVCIIrj0md_zpQ-.json  changepack_log_HkIOQGN5zIEAUT5Au3KyO.json  changepack_log_K0kcIQLcrmqJIWSiQSdws.json  changepack_log_MCFt-HzT7WR8ZN9f2CYN2.json  changepack_log_MfgyCkLTFeg_eWXDGkKeG.json  changepack_log_PjViOvEXyi92KznUhz-C-.json  changepack_log_Pu7HBuKr1ugKgn0LZfqFb.json  changepack_log_SPC7uPC-qTSgq0Jqd9VXp.json  changepack_log_T3zG0KC3ZHXyofRMxILja.json  changepack_log_V-ja9IrE96wO3aKGR8wBq.json  changepack_log_VL8xtXZ0Ty1P8XW4hfaso.json  config.json  (+13 more)
crates/vespera_jni/: Cargo.toml
crates/vespera_jni/src/: lib.rs
examples/axum-example/: Cargo.toml  build.rs  openapi.json
examples/axum-example/models/: memo_comment.vespertide.json
examples/axum-example/src/: lib.rs
examples/axum-example/src/cron/: cleanup.rs
examples/axum-example/src/models/: comment.rs  mod.rs  single.rs  single_rel.rs  user.rs
examples/axum-example/src/routes/: config.rs  enums.rs  error.rs  form.rs  generic.rs  memos.rs  mod.rs  typed_header.rs  users.rs
examples/axum-example/src/routes/foo/: mod.rs
examples/axum-example/src/routes/path/: mod.rs
examples/axum-example/src/routes/path/prefix/: mod.rs
examples/axum-example/tests/: integration_test.rs
examples/axum-example/tests/snapshots/: integration_test__openapi.snap
(+124 files in other folders)
