[package]
name = "vespera_jni"
version.workspace = true
edition.workspace = true
description = "JNI bridge for vespera — call Rust axum apps from Java"
license.workspace = true
repository.workspace = true

[dependencies]
vespera_inprocess = { workspace = true }
jni = "0.22"
tokio = { version = "1", features = ["rt-multi-thread"] }

[lints]
workspace = true
