[package]
name = "axum-example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
vespera = { path = "../../crates/vespera", features = ["cron"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
sea-orm = { version = "^2.0.0-rc.37", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
tempfile = "3"

third = { path = "../third" }

[build-dependencies]
vespera = { path = "../../crates/vespera" }

[dev-dependencies]
axum-test = "20.0"
insta = "1.47"

